changed dataflow for adding ascents, upload profile image

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -151,6 +151,9 @@ input:focus {
 .profile-img {
   max-width: 200px;
 }
+.profile-img:hover {
+  cursor: pointer;
+}
 .settings-block {
   display: grid;
   grid-template-columns: minmax(50px, 1fr);
